정리 완료